--- a/assets/Info.plist
+++ b/assets/Info.plist
@@ -9,18 +9,20 @@
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
-    <string>1.0.0</string>
+    <string>0.3.0</string>
     <key>CFBundleVersion</key>
-    <string>1.0.0</string>
+    <string>0.3.0</string>
     <key>CFBundleExecutable</key>
-    <string>gs2</string>
+    <string>GSSquared</string>
     <key>CFBundleIconFile</key>
-    <string>gs2</string>
+    <string>gs2.icns</string>
     <key>LSMinimumSystemVersion</key>
     <string>10.15</string>
     <key>NSHighResolutionCapable</key>
     <true/>
     <key>LSMultipleInstancesProhibited</key>
     <false/>
+    <key>NSHumanReadableCopyright</key>
+    <string>Copyright © 2025 Jawaid Bazyar</string>
 </dict>
 </plist> 
